Fix display of punctuation on footer and and the overflow by generating random positions

--- a/css/style.css
+++ b/css/style.css
@@ -36,11 +36,12 @@
 .main {
   width: 100%;
   height: 80vh;
-  padding: 1rem 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  padding: 0.5rem 2rem;
+}
+
+.gameScreen {
+  width: 100%;
+  height: 100%;
 }
 
 .footer {
